--- a/datenerhebung.tex
+++ b/datenerhebung.tex
@@ -1,16 +1,46 @@
-\chapter{Erhebung der Daten}
+\chapter{Forschungsgegenstand}
+\label{ch:forschungsgegenstand}
 
-\section{Entwurf der Befragung}
+Nachdem im vorherigen Kapitel die theoretischen Grundlagen gelegt worden sind, geht es nun darum, das Thema der vorliegenden Arbeit genauer zu definieren.
+Dazu werden zunächst die Ziele der Arbeit formuliert sowie Leitfragen aufgestellt, welche erforscht werden sollen.
+Im Anschluss daran werden auf diesen Zielen bzw. Fragen basierende Hypothesen entwickelt, welche statistisch überprüft werden sollen.
+Nachdem diese Vorüberlegungen angestellt worden sind, werden der Entwurf sowie die Durchführung der Datenerhebung beschrieben und diskutiert.
 
-Hypothesen:
+
+\section{Ziele und Leitfragen}
+\label{sec:leitfragen}
+
+Wie die bisherige Forschung gezeigt hat, unterliegen sehr viele Menschen dem Einfluss von implicit biases.
+Zusätzlich wurde gezeigt, dass die Bias Awareness einen maßgeblichen Einfluss auf den Grad der Auswirkungen dieser kognitiven Verzerrungen hat.
+Es wurde diskutiert, dass implicit biases und ihre Einflüsse auch in der Schule präsent sind und unter Anderem Auswirkungen auf die Bewertungen und den schulischen Erfolg der Schülerinnen und Schüler haben kann.
+
+Es stellt sich die Frage, ob die gemessene Bias Awareness von Lehrkräften geringer oder höher ist, wenn sie bei der Erfassung an Schülerinnen und Schüler denken.
+Gegebenenfalls verstärkt sich dieser Effekt auch, wenn es sich dabei um Schülerinnen und Schüler handelt, die sie zusätzlich selbst unterrichten.
+
+Basierend auf diesen Überlegungen lassen sich folgende Leitfragen formulieren:
+
+\begin{itemize}
+	\item Spielt die kontextgebundene bzw. freie Formulierung der Fragebogenitems bei Erfassung der Bias Awareness bei Lehrkräften eine Rolle?
+	\item Unterscheidet sich die gemessene Bias Awareness bei allgemein formulierten Fragebogenitems gegenüber der gemessenen Bias Awareness bei Verwendung von schulspezifischen Formulierungen?
+	\item Bestehen Unterschiede, wenn die Fragebogenitems so formuliert sind, dass Lehrkräfte Aussagen zu selbst unterrichteten Schülerinnen und Schülern treffen müssen?
+\end{itemize}
+
+Die Beantwortung der oben stehenden Leitfragen ist das Ziel der vorliegenden Arbeit.
+
+
+\section{Hypothesen}
+\label{sec:hypothesen}
+
+Basierend auf den oben formulierten Zielen und Leitfragen für diese Arbeit lassen sich nun Hypothesen aufstellen, welche sich anschließend mit statistischen Methoden verifizieren oder falsifizieren lassen:
 
 \begin{enumerate}
-	\item[H1:] \emph{Lehrkräfte haben eine höhere Bias Awareness gegenüber SuS im Vergleich zu Nicht-SuS.}
-	\item[H2:] \emph{Lehrkräfte haben eine geringere Bias Awareness gegenüber SuS, die sie nicht unterrichten im Vergleich zu SuS, die von ihnen unterrichtet werden.}
-	\item[H3:] \emph{Lehrkräfte haben eine geringere Bias-Awareness gegenüber Nicht-SuS im Vergleich zu SuS, die von ihnen unterrichtet werden.}
+	\item[H1:] \emph{Lehrkräfte haben eine höhere Bias Awareness gegenüber Schülerinnen und Schülern im Vergleich zu Personen, die keine Schülerinnen oder Schüler sind.}
+	\item[H2:] \emph{Lehrkräfte haben eine geringere Bias Awareness gegenüber Schülerinnen und Schülern, die sie nicht unterrichten im Vergleich zu Schülerinnen und Schülern, die von ihnen unterrichtet werden.}
+	\item[H3:] \emph{Lehrkräfte haben eine geringere Bias-Awareness gegenüber Personen, die keine Schülerinnen oder Schüler sind im Vergleich zu Schülerinnen und Schülern, die von ihnen unterrichtet werden.}
 \end{enumerate}
 
-H1 beschreibt den Unterschied der Bias Awareness zwischen SuS und Allgemeinheit, H2 den Unterschied zwischen SuS und \emph{eigenen} SuS und H3 den kombinierten Unterschied zwischen eigenen SuS und Allgemeinheit.
+Mithilfe von H1 wird untersucht, ob und wenn ja, wie groß die Unterschiede der gemessenen Bias Awareness zwischen allgemein formulierten Items und schulspezifischen Items sind.
+Ob Unterschiede bei der Erfassung der Bias Awareness bezüglich eigener Schülerinnen und Schüler im Vergleich zu allgemeinen bzw. schulspezifischen Fragebogen vorliegen, werden mit H2 und H3 untersucht.
 
 Die Formulierung der Fragebogenitems spielt eine entscheidende Rolle bei der Evaluierung von Konstrukten wie der Bias Awareness.
 Beispielsweise kann eine kontextspezifische Formulierung der Items im Vergleich zu kontextunabhängig formulierten Items Messfehler reduzieren und die Validität erhöhen \citep{bing2004incremental}.
@@ -19,4 +49,5 @@ Auch das Format der Items kann eine Rolle spielen:
 So reduziert eine nuancenreiche Auswahl an Antwortmöglichkeiten das Risiko für biasbehaftete Antworten \citep{elson2017question}.
 
 
-\section{Durchführung der Datenerhebung}
+\section{Entwurf und Durchführung der Datenerhebung}
+\label{sec:datenerhebung}
