--- a/forschung.tex
+++ b/forschung.tex
@@ -1,8 +1,13 @@
 \chapter{Bisherige Forschung}
 
-\lipsum[100]
+Um die notwendige Basis für die vorliegende Arbeit zu schaffen, wird zunächst ein Blick auf die bisherige Literatur geworfen.
+Beginnend mit einem allgemeinen Blick auf kognitive Verzerrungen als Teil der psychologisch-kognitiven Forschung, ihren Ursachen sowie Beispielen der genannten Phänomene liegt der Fokus insbesondere auf impliziten Stereotypen.
+Als Möglichkeit, die Auswirkungen des implicit bias zu reduzieren wird anschließend eine Einführung zur Thematik der Bias Awareness geliefert sowie bisherige Literatur dazu überprüft.
+Abschließend wird diskutiert, inwiefern Biases im schulischen Kontext präsent sind und in welchen Aspekten sich ihre Auswirkungen auf das Lehren und Lernen äußern.
 
-\section{Kognitive Verzerrungen und implicit bias}
+
+\section{Kognitive Verzerrungen}
+\label{sec:kognitive-verzerrungen}
 
 Unter kognitiven Verzerrungen (englisch: \emph{cognitive biases} oder \emph{cognitive illusions}) versteht man psychologische Effekte, welche zu einer Wahrnehmung oder Beurteilung führen, die von der realen Situation abweicht \citep{pohl2004cognitive}.
 Die zahlreichen Manifestationen dieser Verzerrungen äußern sich auf verschiedene Art und Weise -- einen Überblick liefert \autoref{fig:cognitive-bias-cheat-sheet}.
@@ -52,8 +57,8 @@ Jede der folgenden Kategorien repräsentiert dabei einen der dargestellten Über
 	
 	%TODO: Eventuell diesen Teil hinter die Aufzählung verschieben? Unterscheidung explicit/implicit stereotype
 	Besonders relevant für diese Arbeit ist auch die Bildung von \emph{Stereotypen}.
-	Dabei handelt es sich um ``weitverbreitete, jedoch feste und stark vereinfachte Bilder oder Vorstellungen zu einem bestimmten Typ von Personen oder Dingen'' \citep[Übers. d. Verf.]{bordalo2016stereotypes}. %TODO:Zitat aus Oxford Dictionary
-	Insbesondere in Bezug auf die Zugehörigkeit zu ethnischen Gruppen \citep{brigham1971ethnic, guichard1977ethnic, mastro2009effects} und Geschlecht \citep{hoffman1990gender, heilman2012gender, haines2016times, ellemers2018gender} gab und gibt es immer noch viel aktuelle Forschung, da die Effekte negativer Stereotype unabhängig von gesellschaftlichen Reformen aktuell bleiben.
+	Dabei handelt es sich um ``weitverbreitete, jedoch feste und stark vereinfachte Bilder oder Vorstellungen zu einem bestimmten Typ von Personen oder Dingen'' \citep[Übers. d. Verf.]{bordalo2016stereotypes}.
+	Insbesondere in Bezug auf die Zugehörigkeit zu ethnischen Gruppen \citep{brigham1971ethnic, guichard1977ethnic, mastro2009effects} und Geschlecht \citep{hoffman1990gender, heilman2012gender, haines2016times, ellemers2018gender} gab und gibt es immer noch viel aktuelle Forschung, die sich mit den (insbesondere negativen) Auswirkungen von Stereotypen befasst.
 	
 	\item \emph{Notwendigkeit, schnell zu handeln}: Trotz der Fülle an Informationen, die auf uns einströmen, dürfen wir uns nicht durch das Abwägen von Optionen aufhalten lassen, sondern müssen zuverlässig schnelle und gute Entscheidungen treffen.
 	Aus diesem Grund liegt unser Fokus häufig auf den offensichtlichen und einfachen Dingen, anstatt sich in den komplizierten Details der Situation zu verlieren.
@@ -66,18 +71,83 @@ Jede der folgenden Kategorien repräsentiert dabei einen der dargestellten Über
 	
 	\item \emph{Fehlbarkeit von Erinnerungen}: Nachdem wir der Informationsflut mit radikaler Filterung und Selektion begegnet sind, ihr vermeintlichen Kontext zugewiesen haben und auf Basis dieser Entscheidungen gehandelt haben, stehen wir vor einem weiteren Problem.
 	Über die Nützlichkeit dieser Informationen in der Zukunft muss spekuliert werden, und so kommt es zu Verzerrungen der Realität.
+	Liegt eine Liste von Informationen vor, spielt beispielsweise die Position innerhalb dieser eine große Rolle für die Erinnerung \citep{murdock1962serial, phillips1967effects}.
+	
+	Dass unsere Erfahrungen beeinflussen, wie wir uns an Dinge erinnern, zeigt sich unter Anderem beim \emph{self-reference effect} \citep{rogers1977self}.
+	Hierbei sind Erinnerungen an Informationen, die uns nicht persönlich betreffen, deutlich weniger zuverlässig als jene, die eine hohe persönliche Relevanz haben.
+	Auch der sogenannte \emph{google effect} \citep{sparrow2011google} spiegelt wider, dass unsere Erinnerung abhängig von der Situation ist:
+	Im Wissen, dass die betreffende Information durch eine kurze Internetrecherche schnell wieder abrufbar ist, 
+	sehen wir nur eine reduzierte Notwendigkeit, sich insbesondere an spezielle Details zu erinnern.
 \end{enumerate}
 
 
-%TODO: Gründe für stereotype
+\section{Implizite Stereotypen}
+\label{sec:implicit-bias}
 
-Beim implicit bias (oder auch implicit stereotype) handelt es sich um ``eine Reihe von Überzeugungen über Merkmale, welche für die Mitglieder einer sozialen Kategorie charakteristisch sind'' \citep[Übers. d. Verf.]{greenwald1995implicit}.
+Beim \emph{impliziten Stereotyp} (oder auch \emph{implicit bias}) handelt es sich um ``eine Reihe von Überzeugungen über Merkmale, welche für die Mitglieder einer sozialen Kategorie charakteristisch sind'' \citep[Übers. d. Verf.]{greenwald1995implicit}.
+
+Wie schon durch den Namen angedeutet, handelt es sich hierbei um ein Teilgebiet der Stereotypen, welche schon in \autoref{sec:kognitive-verzerrungen} angesprochen wurden.
+Um die Bedeutung des Begriffs abzugrenzen ist es essenziell hinzuzufügen, dass es sich beim implicit bias um unbewusste Einflüsse auf das Denken handelt.
+Die ebenfalls gebräuchliche Bezeichnung des \emph{explicit stereotype} stellt im Gegensatz dazu aktive und bewusste Einstellungen dar.
+
+Eine weitere wichtige Unterscheidung muss zwischen Stereotypen und Vorurteilen gemacht werden.
+Während es sich beim sozialpsychologischen Begriff des Stereotyps um kognitive Zuordnungen zu einer bestimmten sozialen Kategorie handelt, bezeichnet das Vorurteil die subjektive Bewertung und emotionale Reaktion \citep{degner2022vorurteile}.
+Bei beiden Begriffen handelt es sich jedoch um Konzepte, welche die Einstellungen zu Menschen bestimmter sozialer Gruppen unabhängig von deren individuellen Eigenschaften widerspiegeln.
+
+Die Bildung von Stereotypen und deren Anwendung im Alltag findet bereits im Kindesalter statt \citep{martiny2020theoretischer}.
+Schon bei Kleinkindern im Alter von wenigen Monaten findet eine Identifizierung charakteristischer sozialer Eigenschaften statt \citep{killen2013children}.
+Dies geschieht im Rahmen sozialer Kategorisierung, bei welcher es sich um eine Vorstufe zur Stereotypenbildung handelt.
+Hierbei werden Menschen mit einer oder mehreren Gemeinsamkeiten zu einer sozialen Gruppe zusammengefasst.
+Die Einordnung von Objekten und Menschen in Kategorien ist ein Prozess, der regelmäßig und weitgehend automatisch stattfindet \citep{macrae2000social}.
+Diese Gruppierung hilft dabei, die Komplexität sozialer und so die damit einhergehende kognitive Belastung zu reduzieren sowie leichtere Vorhersagen zu treffen \citep{killen2013children}.
+Beispielsweise ist die Erinnerung von Kindern an Informationen, welche ihrem kognitivem Schema entsprechen, stärker als wenn dies nicht der Fall ist \citep{bigler1993cognitive}.
+
+Beobachten lassen sich die Effekte dieser Kategorisierung ebenfalls bereits im frühen Kindesalter:
+So zeigen schon drei Monate alte Säuglinge Präferenzen gegenüber den Gesichtern von Mitgliedern der eigenen Ethnie gegenüber denen von Mitgliedern anderer Ethnien \citep{kelly2005three}.
+Das Vorhandensein impliziter Stereotype ließ sich ab einem Alter von 4--9 Jahren zeigen \citep{bigler1993cognitive}, während explizite Vorurteile ebenfalls ab einem Alter von 4 Jahren gebildet werden \citep{aboud1993developmental}.
+Es wird davon ausgegangen, dass viele Stereotype erlernt sind und stark durch das soziale Umfeld geprägt werden.
+Kinder nutzen dabei den Vergleich mit Beispielen \citep{martin1981schematic} und Gegenbeispielen \citep{slaby1975development}, um die eigene Gruppenzugehörigkeit abzugrenzen und erwartetes Verhalten vorherzusagen \citep{tajfel1979integrative}.
+
+Nach dem \emph{Stereotype Content Model} \citep{fiske2002model} lassen sich Stereotype anhand der zwei Dimensionen \emph{Wärme} und \emph{Kompetenz} kategorisieren.
+Während die Dimension der Wärme beschreibt, ob die betreffende Gruppe als freundlich oder feindlich gesinnt wahrgenommen wird, stellt die Dimension der Kompetenz den zugewiesenen sozialen Status dar.
+Wie in \autoref{tab:implicit-stereotype-warmth-competence} dargestellt, werden je nach Wärme und Kompetenz unterschiedliche Emotionen bzw. Vorurteile mit den Stereotypen verbunden \citep{cuddy2008warmth}.
+So werden beispielsweise arme Menschen, welche selbst einen niedrigen sozio-ökonomischen Status haben, jedoch gleichzeitig als Bedrohung für den eigenen Status wahrgenommen werden, häufig mit der Emotion Verachtung in Verbindung gebracht.
+
+\begin{table}[h!]
+	\begin{tabularx}{\textwidth}[h]{cc|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X}
+		&& \multicolumn{2}{c}{\textbf{Kompetenz}}\\
+		&& niedrig & hoch\\
+		\hline
+		\multirow{4}{*}{\rotatebox[origin=c]{90}{\textbf{Wärme}}} & \multirow{2}{*}{\rotatebox[origin=c]{90}{hoch}} & Mitleid & Bewunderung\\
+		&& z.B. ältere Menschen & z.B. Freunde\\
+		\cline{2-4}
+		& \multirow{2}{*}{\rotatebox[origin=c]{90}{niedrig}} &  Verachtung & Neid\\
+		&& z.B. arme Menschen & z.B. reiche Menschen
+	\end{tabularx}
+	\caption{Stereotype Content Model (Darstellung nach \cite{fiske2002model})}
+	\label{tab:implicit-stereotype-warmth-competence}
+\end{table}
+
+Auch wenn die Bildung von Stereotypen ein universell stattfindender Prozess ist, der grundsätzlich viele Vorteile mit sich bringt, lassen sich viele negative Effekte darauf zurückführen.
+Beispielsweise führen stereotypisierte Gruppen negatives Feedback eher auf Stereotype zurück, während positives Feedback eher als Mitleid interpretiert wird \citep{crocker1991social}.
+Weiterhin können implizite Stereotype zu selbsterfüllenden Prophezeihungen führen \citep{latu2015gender}.
+Zum Beispiel kann ein Arbeitgeber, der ein negatives Bild von Frauen in Führungspositionen hat, diese in Bewerbungsgesprächen durch seine Rückmeldungen negativ beeinflussen und somit zu einem schlechteren Ergebnis der Bewerberin führen.
+Zusätzlich können bekannte Stereotype das Selbstbild von Mitgliedern der betroffenen Personengruppe negativ beeinflussen \citep{cox2012stereotypes, ebert2013positionsartikel}.
+Dies kann zu einer Internalisierung der mit dem Stereotyp verbundenen Eigenschaften führen.
+Der Effekt der selbsterfüllenden Prophezeihung akkumuliert sich außerdem \citep{madon2018accumulation}, d.h. je mehr Menschen stereotypische Erwartungen haben, desto größer die Reaktion im Verhalten der betroffenen Person.
+
+Stereotype und Vorurteile sind häufig die Ursache offener Diskriminierung.
+Beispielsweise lässt sich die Diskriminierung von bestimmten Gruppen bei Jobinterviews auf die Stereotypisierung zurückführen -- ein Effekt, der sich bei übergewichtigen Menschen \citep{agerstrom2011role}, Homosexuellen \citep{tilcsik2011pride} sowie weiblichen Bewerberinnen \citep{picho2013exploring, latu2015gender} beobachten lässt.
+
 
 \section{Bias Awareness}
+\label{sec:bias-awareness}
 
 Eine höhere Bias Awareness trägt dazu bei, den eigenen impliziten Bias zu reduzieren \citep{pope2018awareness} und hilft, den Einfluss von Biases auf beobachtete Handlungen zu erkennen \citep{perry2015modern}.
 
-\section{Biases im schulischen Kontext}
+
+\section{Implicit Bias und Bias Awareness im schulischen Kontext}
+\label{sec:biases-schule}
 
 Verzerrungen in Deutsch und Mathematik bei Grundschullehrkräften: \cite{lorenz2016stereotype}
 
