--- a/thesis-ufr.sty
+++ b/thesis-ufr.sty
@@ -11,6 +11,8 @@
 \setlength\parskip{1em}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{multirow}	%Join rows in tables
+\renewcommand{\arraystretch}{1.5}	%Vertical spacing in tables etc.
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{tabularx}
