--- a/thesis.bib
+++ b/thesis.bib
@@ -466,3 +466,266 @@ publisher	=	{American Psychological Association}
 	publisher	=	{Elsevier}
 }
 
+@article{rogers1977self,
+	title		=	{Self-reference and the encoding of personal information},
+	author		=	{Rogers, Timothy B and Kuiper, Nicholas A and Kirker, William S},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{35},
+	number		=	{9},
+	pages		=	{677},
+	year		=	{1977},
+	publisher	=	{American Psychological Association}
+}
+
+@article{sparrow2011google,
+	title		=	{Google effects on memory: Cognitive consequences of having information at our fingertips},
+	author		=	{Sparrow, Betsy and Liu, Jenny and Wegner, Daniel M},
+	journal		=	{Science},
+	volume		=	{333},
+	number		=	{6043},
+	pages		=	{776--778},
+	year		=	{2011},
+	publisher	=	{American Association for the Advancement of Science}
+}
+
+@article{phillips1967effects,
+	title		=	{Effects of list length on short-term memory},
+	author		=	{Phillips, James L and Shiffrin, Richard M and Atkinson, Richard C},
+	journal		=	{Journal of Verbal Learning and Verbal Behavior},
+	volume		=	{6},
+	number		=	{3},
+	pages		=	{303--311},
+	year		=	{1967},
+	publisher	=	{Elsevier}
+}
+
+@article{murdock1962serial,
+	title		=	{The serial position effect of free recall},
+	author		=	{Murdock Jr, Bennet B},
+	journal		=	{Journal of experimental psychology},
+	volume		=	{64},
+	number		=	{5},
+	pages		=	{482},
+	year		=	{1962},
+	publisher	=	{American Psychological Association}
+}
+
+@article{martiny2020theoretischer,
+	title		=	{Ein theoretischer und empirischer {\"U}berblick {\"u}ber die Entwicklung von Stereotypen und ihre Konsequenzen im Schulkontext},
+	author		=	{Martiny, Sarah E and Froehlich, Laura},
+	journal		=	{Stereotype in der Schule},
+	pages		=	{1--32},
+	year		=	{2020},
+	publisher	=	{Springer}
+}
+
+@article{killen2013children,
+	title		=	{Children and social exclusion: Morality, prejudice, and group identity},
+	author		=	{Killen, Melanie and Rutland, Adam},
+	journal		=	{Journal of Moral Education},
+	volume		=	{42},
+	number		=	{2},
+	pages		=	{258--260},
+	year		=	{2013},
+	publisher	=	{Wiley-Blackwell},
+	doi			=	{10.1080/03057240.2013.774854},
+	isbn		=	{978-1-4051-7651-4}
+}
+
+@article{kelly2005three,
+	title		=	{Three-month-olds, but not newborns, prefer own-race faces},
+	author		=	{Kelly, David J and Quinn, Paul C and Slater, Alan M and Lee, Kang and Gibson, Alan and Smith, Michael and Ge, Liezhong and Pascalis, Olivier},
+	journal		=	{Developmental science},
+	volume		=	{8},
+	number		=	{6},
+	pages		=	{F31--F36},
+	year		=	{2005},
+	publisher	=	{Wiley Online Library}
+}
+
+@article{bigler1993cognitive,
+	title		=	{A cognitive-developmental approach to racial stereotyping and reconstructive memory in Euro-American children},
+	author		=	{Bigler, Rebecca S and Liben, Lynn S},
+	journal		=	{Child development},
+	volume		=	{64},
+	number		=	{5},
+	pages		=	{1507--1518},
+	year		=	{1993},
+	publisher	=	{Wiley Online Library}
+}
+
+@article{aboud1993developmental,
+	title		=	{The developmental psychology of racial prejudice},
+	author		=	{Aboud, Frances E},
+	journal		=	{Transcultural Psychiatric Research Review},
+	volume		=	{30},
+	number		=	{3},
+	pages		=	{229--242},
+	year		=	{1993},
+	publisher	=	{Sage Publications},
+	address		=	{Thousand Oaks, CA}
+}
+
+@book{degner2022vorurteile,
+	title		=	{Vorurteile: Haben immer nur die anderen},
+	author		=	{Degner, Juliane},
+	year		=	{2022},
+	publisher	=	{Springer},
+	address		=	{Berlin/Heidelberg},
+	isbn		=	{978-3-662-60571-4},
+	doi			=	{10.1007/978-3-662-60572-1}
+}
+
+@article{macrae2000social,
+	title		=	{Social cognition: Thinking categorically about others},
+	author		=	{Macrae, C Neil and Bodenhausen, Galen V},
+	journal		=	{Annual review of psychology},
+	volume		=	{51},
+	number		=	{1},
+	pages		=	{93--120},
+	year		=	{2000},
+	publisher	=	{Annual Reviews},
+	address		=	{Palo Alto, CA},
+	doi			=	{10.1146/annurev.psych.51.1.93},
+	issn		=	{1545-2085}
+}
+
+@article{martin1981schematic,
+	title		=	{A schematic processing model of sex typing and stereotyping in children},
+	author		=	{Martin, Carol Lynn and Halverson, Charles F},
+	journal		=	{Child development},
+	pages		=	{1119--1134},
+	year		=	{1981},
+	publisher	=	{JSTOR}
+}
+
+@article{slaby1975development,
+	title		=	{Development of gender constancy and selective attention to same-sex models},
+	author		=	{Slaby, Ronald G and Frey, Karin S},
+	journal		=	{Child development},
+	pages		=	{849--856},
+	year		=	{1975},
+	publisher	=	{JSTOR}
+}
+
+@article{tajfel1979integrative,
+	title		=	{An integrative theory of intergroup conflict},
+	author		=	{Tajfel, Henri and Turner, John},
+	journal		=	{The social psychology of intergroup relations},
+	pages		=	{33--47},
+	publisher	=	{Brooks/Cole},
+	year		=	{1979},
+	address		=	{Monterey, CA}
+}
+
+@article{fiske2002model,
+	title		=	{A model of (often mixed) stereotype content: Competence and warmth respectively follow from perceived status and competition},
+	author		=	{Fiske, Susan T and Cuddy, Amy J. C. and Glick, Peter and Xu, Jun},
+	journal		=	{Journal of Personality and Social Psychology},
+	volume		=	{82},
+	number		=	{6},
+	pages		=	{878--902},
+	year		=	{2002}
+}
+
+@article{cuddy2008warmth,
+	title		=	{Warmth and competence as universal dimensions of social perception: The stereotype content model and the BIAS map},
+	author		=	{Cuddy, Amy JC and Fiske, Susan T and Glick, Peter},
+	journal		=	{Advances in experimental social psychology},
+	volume		=	{40},
+	pages		=	{61--149},
+	year		=	{2008},
+	publisher	=	{Elsevier}
+}
+
+@article{crocker1991social,
+	title		=	{Social stigma: The affective consequences of attributional ambiguity},
+	author		=	{Crocker, Jennifer and Voelkl, Kristin and Testa, Maria and Major, Brenda},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{60},
+	number		=	{2},
+	pages		=	{218},
+	year		=	{1991},
+	publisher	=	{American Psychological Association}
+}
+
+@article{latu2015gender,
+	title		=	{Gender biases in (inter) action: The role of interviewers' and applicants' implicit and explicit stereotypes in predicting women's job interview outcomes},
+	author		=	{Latu, Ioana M and Mast, Marianne Schmid and Stewart, Tracie L},
+	journal		=	{Psychology of Women Quarterly},
+	volume		=	{39},
+	number		=	{4},
+	pages		=	{539--552},
+	year		=	{2015},
+	publisher	=	{Sage Publications},
+	address		=	{Los Angeles, CA}
+}
+
+@article{madon2018accumulation,
+	title		=	{The accumulation of stereotype-based self-fulfilling prophecies},
+	author		=	{Madon, Stephanie and Jussim, Lee and Guyll, Max and Nofziger, Heather and Salib, Elizabeth R and Willard, Jennifer and Scherr, Kyle C},
+	journal		=	{Journal of Personality and Social Psychology},
+	volume		=	{115},
+	number		=	{5},
+	pages		=	{825},
+	year		=	{2018},
+	publisher	=	{American Psychological Association}
+}
+
+@article{tilcsik2011pride,
+	title		=	{Pride and prejudice: Employment discrimination against openly gay men in the United States},
+	author		=	{Tilcsik, Andr{\'a}s},
+	journal		=	{American Journal of sociology},
+	volume		=	{117},
+	number		=	{2},
+	pages		=	{586--626},
+	year		=	{2011},
+	publisher	=	{University of Chicago Press},
+	address		=	{Chicago, IL}
+}
+
+@article{agerstrom2011role,
+	title		=	{The role of automatic obesity stereotypes in real hiring discrimination},
+	author		=	{Agerstr{\"o}m, Jens and Rooth, Dan-Olof},
+	journal		=	{Journal of Applied Psychology},
+	volume		=	{96},
+	number		=	{4},
+	pages		=	{790},
+	year		=	{2011},
+	publisher	=	{American Psychological Association}
+}
+
+@article{picho2013exploring,
+	title		=	{Exploring the moderating role of context on the mathematics performance of females under stereotype threat: A meta-analysis},
+	author		=	{Picho, Katherine and Rodriguez, Ariel and Finnie, Lauren},
+	journal		=	{The Journal of social psychology},
+	volume		=	{153},
+	number		=	{3},
+	pages		=	{299--333},
+	year		=	{2013},
+	publisher	=	{Taylor \& Francis}
+}
+
+@article{cox2012stereotypes,
+	title		=	{Stereotypes, prejudice, and depression: The integrated perspective},
+	author		=	{Cox, William TL and Abramson, Lyn Y and Devine, Patricia G and Hollon, Steven D},
+	journal		=	{Perspectives on Psychological Science},
+	volume		=	{7},
+	number		=	{5},
+	pages		=	{427--449},
+	year		=	{2012},
+	publisher	=	{Sage Publications},
+	address		=	{Los Angeles, CA}
+}
+
+@article{ebert2013positionsartikel,
+	title		=	{Positionsartikel zum Forschungsprogramm Explizite und implizite geschlechterbezogene Kognitionen heute},
+	author		=	{Ebert, Irena D and Steffens, Melanie C},
+	journal		=	{GENDER--Zeitschrift f{\"u}r Geschlecht, Kultur und Gesellschaft},
+	volume		=	{5},
+	number		=	{3},
+	pages		=	{9--10},
+	year		=	{2013},
+	publisher	=	{Verlag Barbara Budrich}
+}
+
