--- a/titlepage.tex
+++ b/titlepage.tex
@@ -9,7 +9,7 @@
 \vspace{2cm}\\
 \Large{von Lorenz Bung}
 \vspace{5cm}\\
-\today
+31.12.2024
 \newpage
 \backgroundsetup{contents={}}
 
@@ -32,15 +32,17 @@
 		{\Large Wirtschafts- und Verhaltenswissenschaftliche Fakultät}
 		\vspace{1cm}
 		
+		\renewcommand{\arraystretch}{1.0}	%Zeilenabstand in der Tabelle reduzieren
 		\begin{tabular}{p{4cm} p{10cm}}
 			Thema: & \thetitle \\&\\
 			Kandidat: & \theauthor \\
 			& Schlossbergring 36 \\
 			& 79098 Freiburg \\&\\
 			Prüfer: & Prof. Dr. Meike Bonefeld \\
-			Ausgabedatum: & 01.09.2024 \\
+			Ausgabedatum: & 01.12.2024 \\
 			Abgabedatum: & 31.12.2024 \\
 		\end{tabular}
+		\renewcommand{\arraystretch}{1.5}	%Zeilenabstand in der Tabelle zurücksetzen
 	\end{center}
 }
 \newpage
